Resolves: tdf#154941 MROUND() use approxValue of division to round

Change-Id: I75394b1bdffbdadf051157e84afa06f30126fe23
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150764
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins